# TheOriginalOOPLabs

./: CMakeLists.txt  README.md  main.cpp
include/: array.h  battle_manager.h  complex_type.h  custom_container.h  figure.h  file_manager.h  fixed_block_memory_resource.h  game.h  game_manager.cpp  hexagon.h  npc.h  npc_factory.h  npc_visitor.h  observer.h  octagon.h  point.h  triangle.h
src/: battle_manager.cpp  binary.cpp  binary.h  chocolate.cpp  chocolate.h  custom_container.cpp  figure.cpp  file_manager.cpp  fixed_block_memory_resource.cpp  game.cpp  game_manager.cpp  hexagon.cpp  main.cpp  npc.cpp  npc_factory.cpp  npc_visitor.cpp  observer.cpp  octagon.cpp  triangle.cpp
tests/: CMakeLists.txt  test_battle_manager.cpp  test_binary.cpp  test_chocolate.cpp  test_figures.cpp  test_file_manager.cpp  test_memory_resource.cpp  test_npc.cpp  test_npc_factory  test_observer.cpp
